# va-calculator

./: Cargo.toml  index.html  package-lock.json  package.json  svelte.config.js
VA_Calculator/: index.html  package-lock.json  package.json
VA_Calculator/src/: App.jsx  index.css
VA_Calculator/src/components/: Dependencies.jsx  PartOption.jsx  PartSelect.jsx  PercBtn.jsx  PercentSelect.jsx  RatingsBtn.jsx  TrajectorLogo.jsx  index.js
fastapi/: main.py  objects.py  requirements.txt
fastapi/static/scripts/: script.js  template.js
fastapi/templates/: calculator.htm  dep_rating.htm  disability_rating.htm  nav.htm  ratings.htm
node/: package-lock.json  package.json
node/public/scripts/: ratings.js  (+1 more)
node/src/: index.js
public/: index.html
src/: App.js  app.css  app.html  app.jsx  app.rs  index.css  main.rs
src/assets/: index.js
src/components/: Dependencies.jsx  Dependencies.rs  Loader.jsx  PartOption.jsx  PartOption.rs  PartSelect.jsx  PartSelect.rs  PercBtn.jsx  PercBtn.rs  PercentSelect.jsx  PercentSelect.rs  RatingsBtn.jsx  RatingsBtn.rs  SvgFiles.rs  TrajectorLogo.jsx  TrajectorLogo.rs  index.js  mod.rs
src/lib/: Dependents.svelte  DependentsInput.svelte  PartOption.svelte  PartSelect.svelte  PercentButton.svelte  PercentSelect.svelte  RadialProgress.svelte  RatingBox.svelte  RatingButton.svelte  TrajectorLogo.svelte
src/panels/: Dependencies.rs  Instruction.rs  Percentage.rs  Rating.rs  Select.rs  mod.rs
src/routes/: +layout.svelte  +page.svelte
src/stores/: Dependents.js  DisabilityRating.js  Monthly.js  PartDisplay.js  Parts.js  Ratings.js
(+12 files in other folders)
